Work on porting the web stuff

--- a/packages/tailwind-config/globals.css
+++ b/packages/tailwind-config/globals.css
@@ -79,6 +79,11 @@
   }
 
   .full-screen {
-    @apply absolute top-0 right-0 bottom-0 left-0 h-screen max-h-full min-h-full w-full overflow-hidden;
+    @apply absolute bottom-0 left-0 right-0 top-0 h-screen max-h-full min-h-full w-full overflow-hidden;
+  }
+
+  /* Calendar */
+  .rdp-vhidden {
+    @apply hidden;
   }
 }
