More used badges on calendar settings

--- a/packages/web-core/src/globals.css
+++ b/packages/web-core/src/globals.css
@@ -28,6 +28,10 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
+    /* CUSTOM */
+    --warn: 30 100% 50%;
+    --warn-foreground: 222.2 47.4% 11.2%;
+
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
@@ -59,6 +63,10 @@
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
+
+    /* CUSTOM */
+    --warn: 38 100% 40%;
+    --warn-foreground: 210 40% 98%;
 
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
