--- a/packages/web-core/src/globals.css
+++ b/packages/web-core/src/globals.css
@@ -100,7 +100,7 @@
   }
 
   .full-screen {
-    @apply absolute bottom-0 left-0 right-0 top-0 h-screen max-h-full min-h-full w-full overflow-hidden;
+    @apply fixed bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden;
   }
 
   /* Preloader */
